--- a/book/Experience.tex
+++ b/book/Experience.tex
@@ -1,11 +1,11 @@
 \documentclass[a4paper,11pt]{book}
-%\usepackage[utf8]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 
 \begin{document}
 
 \author{
-	Aveiga Iván \ Enriquez Wilson \ Sornoza Andrés
+	Aveiga Iván \ Enriquez Wilson \ Iñiguez Pedro
 }
 \title{Haskell: Mastermind}
 \maketitle
