--- a/book/Haskell.tex
+++ b/book/Haskell.tex
@@ -1,20 +1,4 @@
-\documentclass[a4paper,11pt]{book}
-\usepackage[utf8]{inputenc}
-\usepackage{graphicx}
-
-\begin{document}
-
-\author{
-	Aveiga Iván \ Enriquez Wilson \ Iñiguez Pedro
-}
-\title{Haskell: Mastermind}
-\maketitle
-\begin{figure}[h]
-\centering
-\includegraphics[width=0.7\linewidth]{./logo}
-\end{figure}
-
-\newpage
+\textbf{Haskell: Mastermind\footnote{Aveiga Iván, Enríquez Wilson, Íñiguez Pedro}}
 
 \section{Introduction}
 Mastermind or Master Mind is a code-breaking game for two players. The modern game with pegs was invented in 1970 by Mordecai Meirowitz, an Israeli postmaster and telecommunications expert, but the game resembles an earlier pencil and paper game called Bulls and Cows that may date back a century or more. \\
@@ -61,10 +45,3 @@ We use climbing hill because none of the members has taken Artificial Intelligen
 The principal problem in the moment of develop in Haskell is the big change of thinking model, changing from imperative thinking to mathematical thinking. In this project we consider the change of paradigm was so hard, because from firsts years the university introduces in the concept of imperative and the time to make this change is so short. 
 
 This short period of time makes the people have a bad experience with functional programming languages and this cause that not take the bennefits of functional programming.
-
-
-
-
-
-
-\end{document}
