--- a/book/Android.tex
+++ b/book/Android.tex
@@ -1,19 +1,24 @@
 \textbf{Notify Me: Observations, Conclusions and Experiences} \footnote{Aveiga Iván, Enríquez Wilson, Sornoza Andrés.}
+
+
+\section{Description}
+NotifyMe is an app that provides a service of reminders, the new feature is the of use GPS to detect when the user is near the place were he needs to realize the task.
+
 \section{Observations}
 
-As observations we highlight the work of using GoogleMaps' API in mobile apps, and the usage of mobile development in  Android. 
-Como observaciones podemos destacar el trabajo de usar la API de GoogleMaps en aplicaciones móviles y el uso de desarrollo móvil en Android. También el uso de software de versionamiento para controlar las versiones del proyecto. \\
+As observations we highlight the use of GoogleMaps' API on mobile apps, and the usage of mobile development on Android. \\
 
-Versioning is so helpful in the moment to develop because offer advantages as history of commits, workingroups, reverse commits and aportations of every member in the team. We use Github as Versioning Software.
+The use of Versioning is very helpful while developing, because it offers advantages such as: history of commits, workingroups, reverse commits and contributions of every member in the team. We used Github as  our Versioning Software.
 
 \section{Conclusiones}
-Was beneficial work with GoogleMaps's API because the big data of google in maps allows a rich experience, GoogleMaps \\ offers better maps than Bing, Nokia, Apple.
+It was very beneficial to work with GoogleMaps's API because the big data of GoogleMaps provided a rich experience. GoogleMaps \\ offers a better maps service than Bing, Nokia, and Apple.
 
-We analize work with Google Place for use categories, this will be analize in future versions of NotifyMe. \\
+We have analized the possibility to work with Google Place to implement categories for future versions of NotifyMe. \\
 
-We analyze work with Google Place to use categories, this will be analyzed in future versions of NotifyMe.
 \section{Experience}
 
-Notifyme's Team consider a positive experience and beneficial from academics point, because versioning will serve for futures works and lifestyles remains.\\
+Working on a project for Android was a very educational experience. Although we were using Java as the primary language for the project, there were a lot of new things we had to learn. For example, working with the layout of the application and emulating a cellphone to test the application we made. \\
 
-Work with mobile technologies was interesting, allowed us into this field today is very profitable.
+We had some setbacks, like the database for the app, and a small problem with the map where it didn’t show the saved locations. But there was tons of information available on the internet to solve those problems. This was one of the reasons why I liked working on Android, the amount of information and tutorials are huge, which makes it a lot easier to learn.\\
+
+In the end I feel learning this was a very useful experience, because of the standings of the current market and the demand for Android apps. 
