--- a/book/Book.tex
+++ b/book/Book.tex
@@ -11,7 +11,10 @@
 	\includegraphics[width=0.7\linewidth]{./logo}
 	\end{figure}
 	\newpage
-	
+	\input{LaTeX.tex}
+	\newpage
+	\input{Github.tex}
+	\newpage
 	\input{Android.tex}
 	\clearpage
 	\input{Haskell.tex}
